<resources>
    <string name="app_name">PlayStation Quiz</string>
    <string name="question_1">1) What new game PlayStation showed at E3 2016?</string>
    <string name="day_s_gone" translatable="false">Day\'s Gone</string>
    <string name="the_last_guardian" translatable="false">The Last Guardian</string>
    <string name="mario_party_8" translatable="false">Mario Party 8</string>
    <string name="uncharted_4" translatable="false">Uncharted 4</string>
    <string name="question_2">2) What is the name of the system people use to play online on PlayStation?</string>
    <string name="question_3">3) Choose which systems are real from below</string>
    <string name="ps4_elite" translatable="false">PS4 Elite</string>
    <string name="ps4_slim" translatable="false">PS4 Slim</string>
    <string name="ps4_pro" translatable="false">PS4 Pro</string>
    <string name="ps4_s" translatable="false">PS4 S</string>
    <string name="submit">Submit</string>
    <string name="question_4">4) Which were the PS+ games of September 2016?</string>
    <string name="journey_and_infamous">Journey and Infamous Second Son</string>
    <string name="infamous_and_lords">Infamous Second Son and Lords of the Fallen</string>
    <string name="lords_and_journey">Lords of the Fallen and Journey</string>
    <string name="network_hint">It\'s a network</string>
</resources>
