<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.klauskpm.playstationquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout style="@style/QuestionBox">

            <TextView
                android:id="@+id/question_1__text_view"
                style="@style/QuestionText"
                android:text="@string/question_1" />

            <RadioGroup
                style="@style/Answer.RadioGroup"
                android:layout_below="@+id/question_1__text_view">

                <RadioButton
                    style="@style/Answer.RadioButton"
                    android:text="@string/day_s_gone" />

                <RadioButton
                    style="@style/Answer.RadioButton"
                    android:text="@string/the_last_guardian" />

                <RadioButton
                    style="@style/Answer.RadioButton"
                    android:text="@string/mario_party_8" />

                <RadioButton
                    style="@style/Answer.RadioButton"
                    android:text="@string/uncharted_4" />
            </RadioGroup>

        </RelativeLayout>

        <View style="@style/QuestionDivider"></View>

        <RelativeLayout style="@style/QuestionBox">

            <TextView
                android:id="@+id/question_2__text_view"
                style="@style/QuestionText"
                android:labelFor="@+id/answer_question_2__edit_text"
                android:text="@string/question_2" />

            <EditText
                android:id="@+id/answer_question_2__edit_text"
                style="@style/Answer.EditText.Number"
                android:layout_below="@+id/question_2__text_view" />
        </RelativeLayout>

        <View style="@style/QuestionDivider"></View>

        <RelativeLayout style="@style/QuestionBox">

            <TextView
                android:id="@+id/question_3__text_view"
                style="@style/QuestionText.BottomSpace"
                android:text="@string/question_3" />

            <CheckBox
                android:id="@+id/answer_1_question_3__check_box"
                style="@style/Answer.CheckBox"
                android:layout_below="@+id/question_3__text_view"
                android:text="@string/ps4_elite" />

            <CheckBox
                android:id="@+id/answer_2_question_3__check_box"
                style="@style/Answer.CheckBox"
                android:layout_below="@+id/answer_1_question_3__check_box"
                android:text="@string/ps4_slim" />

            <CheckBox
                android:id="@+id/answer_3_question_3__check_box"
                style="@style/Answer.CheckBox"
                android:layout_below="@+id/answer_2_question_3__check_box"
                android:text="@string/ps4_pro" />

            <CheckBox
                android:id="@+id/answer_4_question_3__check_box"
                style="@style/Answer.CheckBox"
                android:layout_below="@+id/answer_3_question_3__check_box"
                android:text="@string/ps4_s" />
        </RelativeLayout>

        <View style="@style/QuestionDivider"></View>

        <RelativeLayout style="@style/QuestionBox">

            <TextView
                android:id="@+id/question_4__text_view"
                style="@style/QuestionText"
                android:text="@string/question_4" />

            <RadioGroup
                style="@style/Answer.RadioGroup"
                android:layout_below="@+id/question_4__text_view">

                <RadioButton
                    style="@style/Answer.RadioButton"
                    android:text="@string/journey_and_infamous" />

                <RadioButton
                    style="@style/Answer.RadioButton"
                    android:text="@string/infamous_and_lords" />

                <RadioButton
                    style="@style/Answer.RadioButton"
                    android:text="@string/lords_and_journey" />
            </RadioGroup>

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"
            style="@style/QuizButton"/>
    </LinearLayout>
</ScrollView>
